Sidebar Chat Fix
Fixed main chat area of sidebar being cut off by the server members list.

--- a/minicord-theme.css
+++ b/minicord-theme.css
@@ -2,7 +2,7 @@
  * @name Minicord
  * @description Shrinks and/or minimizes discord elements.
  * @author BranFlakes
- * @version 8.1.2
+ * @version 8.1.3
  * @invite
  * @website
  * @source https://github.com/NewBranFlakes/minicord
@@ -1241,6 +1241,9 @@ div[style='height: 8px;'] {
 }
 .content_c48ade:has(.chatLayerWrapper__01ae2) .scroller__36d07 {
     max-width: 100% !important;
+}
+.content_c48ade:has(.chatLayerWrapper__01ae2):not(:has(.privateChannels__35e86)) .chatLayerWrapper__01ae2 .scroller__36d07 {
+    max-width: calc(100% - var(--server-members-left-shrunk)) !important;
 }
 
 /* Main chat textbox */
